--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,4 @@ Options +FollowSymLinks
 RewriteEngine On  
 RewriteCond %{SCRIPT_FILENAME} !-d  
 RewriteCond %{SCRIPT_FILENAME} !-f  
-RewriteRule ^.*$ api/test.php  
+RewriteRule ^.*$ api/index.php  
